Refactor bookmark collections